--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./conditions.js"> </script>
-    <script src="./operators.js"> </script>
-    <script src="./assignment.js"> </script>
+    <script src="./looping.js"> </script>
 </body>
 </html>
