--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./looping.js"> </script>
+    <script src="./functionsex.js"> </script>
 </body>
 </html>
