--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./programs.js"> </script>
-    <script src="./functionsex.js"> </script>
+    <script src="./arrays.js"> </script>
 </body>
-</html>7.callback function.
+</html>
