--- a/dom.html
+++ b/dom.html
@@ -6,14 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="demo">Header</h1>
-
-<div class="test">division01</div>
-<div class="test">division02</div>
-<div class="test">division03</div>
-<div class="test">division04</div>
-<div class="test">division05</div>
-
+    <div class="color">
+        <button class="red">red</button>
+        <button class="yellow">yellow</button>
+        <button class="green">green</button>
+        <button class="blue">blue</button>
+        </div>
+        
 <script src="./dom.js"> </script>
 </body>
 </html>
